--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <div class="comment_container">
             <div class="comment">
-                <p class="nick_name m_text">dio.lee_0122<span class="s_text">누나가 젤 조아!</span></p>
+                <p class="nick_name m_text">dio.lee_0122<span class="s_text">히히 쉬야발쨔</span></p>
             </div>
         </div>
 
